examples/test_package/Double_dc_only_report_tool/steps/pl___aircr_rough_run3/#test_analysis_1_result.txt
### Code Evaluation Report: Aircraft Flap Controller in ProbLog

---

#### **1. Document Title**
**Evaluation of Aircraft Flap Controller ProbLog Code**

---

#### **2. Background and Purpose**
The provided code models an aircraft flap controller system inspired by Filieri et al. (2013). It simulates the movement of flaps based on actuator strength, wind effects, and a predefined goal position. The purpose of this evaluation is to:
- Verify the correctness of the code.
- Analyze test results and identify failures.
- Ensure compliance with ProbLog's probabilistic and classical reasoning rules.

---

#### **3. Test Results Summary**
The test results indicate a failure with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 33:207.
```

**Failed Queries:**
- The error occurs during the evaluation of the `attempted_flap_position` predicate, specifically at line 33. The system cannot find clauses for the `->/2` operator, which is used in the conditional logic of the predicate.

---

#### **4. Failure Localization**
- **Failed Predicate:** `attempted_flap_position/2`
- **Code Line:** 33 (as per the error message)
- **Issue:** The error suggests that the conditional logic (`Delta > 0 -> Direction = 1 ; Direction = -1`) is not being parsed correctly. ProbLog may not support the `->/2` operator in this context.

---

#### **5. Root Cause Analysis**
- **Logical Correctness:** The predicate `attempted_flap_position` is intended to calculate the new flap position based on the actuator strength, wind effect, and goal. However, the use of `->/2` for conditional logic is problematic.
- **Probabilistic Rules:** The code correctly defines probabilistic facts (e.g., `wind_effect`, `use_actuator`). However, the error in the deterministic part (`attempted_flap_position`) affects the overall probabilistic reasoning.
- **DeepProbLog:** No DeepProbLog features (e.g., `nn/3`, `tensor`) are used in the code.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The deterministic logic in `attempted_flap_position` fails due to syntax issues.
  - **Probabilistic Reasoning:** Correctly implemented for wind and actuator selection.
  - **Neural Network Integration:** Not applicable (DeepProbLog not used).
- **Edge Cases:**
  - The conditional logic in `attempted_flap_position` is not handled correctly.
  - No checks for undefined inputs or non-list inputs are present.

---

#### **7. Error Summary**

| No. | Problem                          | Impact                          | Suggestion                                  |
|-----|----------------------------------|---------------------------------|--------------------------------------------|
| 1   | `->/2` operator not supported    | Prevents evaluation of `attempted_flap_position` | Replace with `if-then-else` or equivalent ProbLog syntax. |
| 2   | No clauses for conditional logic | Code fails to execute           | Rewrite the predicate to avoid unsupported operators. |

---

#### **8. Recommendations**
1. **Fix Conditional Logic:**
   Replace the `->/2` operator with a ProbLog-compatible alternative, such as:
   ```prolog
   (Delta > 0, Direction = 1 ; Direction = -1)
   ```
2. **Test Edge Cases:**
   Add checks for invalid inputs (e.g., non-integer positions) and ensure recursive termination.
3. **Documentation:**
   Clarify the use of probabilistic facts and deterministic rules in the code comments.

---

**Word Count:** ~450 words.  
**Tone:** Formal and analytical.  
**Format:** Markdown with tables and code blocks.  